--- a/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/Areas/Identity/Pages/_ViewImports.cshtml
@@ -2,4 +2,4 @@
 @using HotelSystem.Areas.Identity
 @using HotelSystem.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@using HotelSystem.Areas.Identity.Data
+@using HotelSystem.Models
