--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using HotelSystem.Areas.Identity.Data
+@using HotelSystem.Models
 
 @inject SignInManager<User> SignInManager
 @inject UserManager<User> UserManager
