--- a/Views/Reservation/Create.cshtml
+++ b/Views/Reservation/Create.cshtml
@@ -1,33 +1,37 @@
 ﻿@model HotelSystem.Models.ViewModels.CreateReservationViewModel
 
 @{
-    ViewData["Title"] = "Create Reservation";
+    ViewData["Title"] = "Zarezerwuj pokój";
 }
 
-<h2>Create Reservation</h2>
+<h2>Zarezerwuj pokój</h2>
+<style>
+        .form-group {
+        margin-bottom: 15px;
+    }
+</style>
 
 <form asp-action="Create" method="post">
 
     <div class="form-group">
-        <label asp-for="StartDate"></label>
+        <label asp-for="StartDate">Data zameldowania</label>
         <input asp-for="StartDate" type="date" class="form-control" />
     </div>
 
     <div class="form-group">
-        <label asp-for="EndDate"></label>
+        <label asp-for="EndDate">Data wymeldowania</label>
         <input asp-for="EndDate" type="date" class="form-control" />
     </div>
 
     <div class="form-group">
-        <label>Room</label>
+        <label>Pokój</label>
         <select asp-for="RoomId"
                 asp-items="ViewBag.Rooms"
                 class="form-control">
         </select>
     </div>
-
     <button type="submit" class="btn btn-primary">
-        Create
+        Zarezerwuj
     </button>
 
 </form>
