--- a/Views/Reservation/Create.cshtml
+++ b/Views/Reservation/Create.cshtml
@@ -5,25 +5,21 @@
 }
 
 <h2>Zarezerwuj pokój</h2>
-<style>
-        .form-group {
-        margin-bottom: 15px;
-    }
-</style>
+
 
 <form asp-action="Create" method="post">
 
-    <div class="form-group">
+    <div class="reservation-form">
         <label asp-for="StartDate">Data zameldowania</label>
         <input asp-for="StartDate" type="date" class="form-control" />
     </div>
 
-    <div class="form-group">
+    <div class="reservation-form">
         <label asp-for="EndDate">Data wymeldowania</label>
         <input asp-for="EndDate" type="date" class="form-control" />
     </div>
 
-    <div class="form-group">
+    <div class="reservation-form">
         <label>Pokój</label>
         <select asp-for="RoomId"
                 asp-items="ViewBag.Rooms"
