--- a/Views/Reservation/Create.cshtml
+++ b/Views/Reservation/Create.cshtml
@@ -6,7 +6,12 @@
 
 <h2>Zarezerwuj pokój</h2>
 
-
+@if (!ViewData.ModelState.IsValid)
+{
+    <div class="alert alert-danger">
+        @Html.ValidationSummary(false)
+    </div>
+}
 <form asp-action="Create" method="post">
 
     <div class="reservation-form">
