--- a/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model ForgotPasswordModel
 @{
-    ViewData["Title"] = "Forgot Password";
+    ViewData["Title"] = "Zapomniałem hasła.";
 }
 
 <div class="container">
@@ -9,27 +9,27 @@
         <div class="col-md-6 col-lg-4">
             <div class="card shadow-lg border-0 rounded-lg">
                 <div class="card-header bg-primary text-white text-center">
-                    <h2 class="my-4 fw-bold">Forgot My password.</h2>
+                    <h2 class="my-4 fw-bold">Zapomniałem hasła.</h2>
                 </div>
                 <div class="card-body p-4">
-                    <p class="text-center mb-4">Enter your e-mail address and we will send you a link to reset your password.</p>
+                    <p class="text-center mb-4">Wprowadź adres e-mail, na który wyślemy link do zresetowania hasła.</p>
 
                     <form method="post">
                         <div asp-validation-summary="ModelOnly" class="alert alert-danger" role="alert"></div>
 
                         <div class="form-floating mb-3">
-                            <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
+                            <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="adres@przyklad.com" />
                             <label asp-for="Input.Email">E-mail</label>
                             <span asp-validation-for="Input.Email" class="text-danger"></span>
                         </div>
 
                         <div class="d-grid">
-                            <button type="submit" class="btn btn-primary btn-lg">Reset Password</button>
+                            <button type="submit" class="btn btn-primary btn-lg">Zresetuj hasło</button>
                         </div>
 
                         <div class="text-center mt-4">
                             <p>
-                                <a asp-page="./Login">Back to Login</a>
+                                <a asp-page="./Login">Powróć do logowania</a>
                             </p>
                         </div>
                     </form>
