--- a/Areas/Identity/Pages/Account/ConfirmEmailChange.cshtml
+++ b/Areas/Identity/Pages/Account/ConfirmEmailChange.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model ConfirmEmailChangeModel
 @{
-    ViewData["Title"] = "Confirm e-mail change";
+    ViewData["Title"] = "Potwierdź zmianę adresu e-mail.";
 }
 
 <h1>@ViewData["Title"]</h1>
