--- a/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
+++ b/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model ForgotPasswordConfirmation
 @{
-    ViewData["Title"] = "Password Reset Link Sent";
+    ViewData["Title"] = "Link do zresetowania hasła został wysłany.";
 }
 
 <div class="container">
@@ -9,22 +9,22 @@
         <div class="col-md-6 col-lg-4">
             <div class="card shadow-lg border-0 rounded-lg">
                 <div class="card-header bg-primary text-white text-center">
-                    <h2 class="my-4 fw-bold">Password reset link sent.</h2>
+                    <h2 class="my-4 fw-bold">Link do zresetowania hasła został wysłany.</h2>
                 </div>
                 <div class="card-body p-4 text-center">
                     <div class="mb-4">
                         <i class="fas fa-envelope fa-5x text-primary mb-3"></i>
                     </div>
-                    <h4 class="mb-3">Check your e-mail</h4>
+                    <h4 class="mb-3">Sprawdź swoją skrzynkę.</h4>
                     <p class="text-muted">
-                        We have sent a password reset link to Your e-mail address.
+						Wysłaliśmy link do zresetowania hasła na podany przez Ciebie adres e-mail.
                     </p>
                     <p class="text-muted">
-                        Please check Your inbox (and spam/junk folder).
+						Sprawdź skrzynkę odbiorczą oraz folder spam, jeśli nie widzisz wiadomości.
                     </p>
                     <hr class="my-4" />
                     <p>
-                        <a asp-page="./Login" class="btn btn-outline-primary">Back to Login</a>
+                        <a asp-page="./Login" class="btn btn-outline-primary">Powróć do logowania</a>
                     </p>
                 </div>
             </div>
