--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model RegisterModel
 @{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = "Zarejestruj się";
 }
 
 <div class="container">
@@ -9,43 +9,43 @@
         <div class="col-md-6 col-lg-4">
             <div class="card shadow-lg border-0 rounded-lg">
                 <div class="card-header bg-primary text-white text-center">
-                    <h2 class="my-4 fw-bold">New here? Create Your account.</h2>
+                    <h2 class="my-4 fw-bold">Utwórz nowe konto.</h2>
                 </div>
                 <div class="card-body p-4">
                     <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
                         <div asp-validation-summary="ModelOnly" class="alert alert-danger" role="alert"></div>
 
                         <div class="form-floating mb-3">
-                            <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
+                            <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="adres@przyklad.com" />
                             <label asp-for="Input.Email">E-mail</label>
                             <span asp-validation-for="Input.Email" class="text-danger"></span>
                         </div>
 
                         <div class="form-floating mb-3">
-                            <input asp-for="Input.Name" class="form-control" autocomplete="off" aria-required="true" placeholder="Your name" />
-                            <label asp-for="Input.Name">Name</label>
+                            <input asp-for="Input.Name" class="form-control" autocomplete="off" aria-required="true" placeholder="Imię" />
+                            <label asp-for="Input.Name">Imię</label>
                             <span asp-validation-for="Input.Name" class="text-danger"></span>
                         </div>
 
                         <div class="form-floating mb-3">
-                            <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" placeholder="Password" />
-                            <label asp-for="Input.Password">Password</label>
+                            <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" placeholder="Hasło" />
+                            <label asp-for="Input.Password">Hasło</label>
                             <span asp-validation-for="Input.Password" class="text-danger"></span>
                         </div>
 
                         <div class="form-floating mb-3">
-                            <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="Confirm password" />
-                            <label asp-for="Input.ConfirmPassword">Confirm Password</label>
+                            <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="Potwierdź hasło" />
+                            <label asp-for="Input.ConfirmPassword">Potwierdź hasło</label>
                             <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
                         </div>
 
                         <div class="d-grid">
-                            <button id="registerSubmit" type="submit" class="btn btn-primary btn-lg">Register</button>
+                            <button id="registerSubmit" type="submit" class="btn btn-primary btn-lg">Zarejestruj</button>
                         </div>
 
                         <div class="text-center mt-4">
                             <p>
-                                Already have an account? <a asp-page="./Login" asp-route-returnUrl="@Model.ReturnUrl">Log in</a>
+                                Posiadasz konto? <a asp-page="./Login" asp-route-returnUrl="@Model.ReturnUrl">Zaloguj się</a>
                             </p>
                         </div>
                     </form>
