Dodanie panelu dla administratora, rozróżnianie użytkowników

--- a/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
@@ -8,25 +8,28 @@
 <h3>@ViewData["Title"]</h3>
 <partial name="_StatusMessage" for="StatusMessage" />
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-3">
+        <partial name="_ManageNav" />
+    </div>
+    <div class="col-md-9">
         <form id="change-password-form" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
             <div class="form-floating mb-3">
-                <input asp-for="Input.OldPassword" class="form-control" autocomplete="obecne-hasło" aria-required="true" placeholder="Wprowadź stare hasło" />
+                <input asp-for="Input.OldPassword" class="form-control" autocomplete="current-password" aria-required="true" placeholder="Wprowadź stare hasło" />
                 <label asp-for="Input.OldPassword" class="form-label">Stare hasło</label>
                 <span asp-validation-for="Input.OldPassword" class="text-danger"></span>
             </div>
             <div class="form-floating mb-3">
-                <input asp-for="Input.NewPassword" class="form-control" autocomplete="nowe-hasło" aria-required="true" placeholder="Wprowadź nowe hasło" />
+                <input asp-for="Input.NewPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="Wprowadź nowe hasło" />
                 <label asp-for="Input.NewPassword" class="form-label">Nowe hasło</label>
                 <span asp-validation-for="Input.NewPassword" class="text-danger"></span>
             </div>
             <div class="form-floating mb-3">
-                <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="nowe-hasło" aria-required="true" placeholder="Potwierdź nowe hasło" />
+                <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="Potwierdź nowe hasło" />
                 <label asp-for="Input.ConfirmPassword" class="form-label">Potwierdź nowe hasło</label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Zmień hasło</button>
+            <button id="change-password-button" type="submit" class="w-100 btn btn-lg btn-primary">Zmień hasło</button>
         </form>
     </div>
 </div>
