--- a/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
@@ -6,9 +6,12 @@
 }
 
 <h3>@ViewData["Title"]</h3>
-
+<partial name="_StatusMessage" for="StatusMessage" />
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-3">
+        <partial name="_ManageNav" />
+    </div>
+    <div class="col-md-9">
         <p>
             Twoje konto zawiera dane osobowe, które nam przekazałeś. Na tej stronie możesz pobrać lub usunąć te dane.
         </p>
