--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                                     <a class="nav-link text-dark"
                                        asp-controller="Admin"
                                        asp-action="Reservations">
-                                        Panel Admina
+                                        Zarządzaj
                                     </a>
                                 </li>
                             }
