--- a/Views/Admin/AddRoom.cshtml
+++ b/Views/Admin/AddRoom.cshtml
@@ -19,6 +19,6 @@
         </select>
         <span asp-validation-for="RoomTypeId" class="text-danger"></span>
     </div>
-    <button type="submit" class="btn btn-primary">Dodaj pokój</button>
+    <button type="submit" class="btn btn-success">Dodaj pokój</button>
     <a href="@(Url.Action("Reservations", "Admin") + "#rooms")" class="btn btn-secondary">Anuluj</a>
 </form>
