--- a/Views/Admin/EditRoom.cshtml
+++ b/Views/Admin/EditRoom.cshtml
@@ -21,7 +21,7 @@
         <span asp-validation-for="RoomTypeId" class="text-danger"></span>
     </div>
     <div class="mt-4">
-        <button type="submit" class="btn btn-primary">Zapisz zmiany</button>
+        <button type="submit" class="btn btn-success">Zapisz zmiany</button>
         <a href="@(Url.Action("Reservations", "Admin") + "#rooms")" class="btn btn-secondary">Anuluj</a>
     </div>
 </form>
