--- a/Views/Admin/Reservations.cshtml
+++ b/Views/Admin/Reservations.cshtml
@@ -70,7 +70,8 @@
     <div class="tab-pane fade" id="rooms" role="tabpanel" aria-labelledby="rooms-tab">
         <h3>Pokoje w hotelu</h3>
         <div class="mb-3">
-            <a asp-action="AddRoom" asp-controller="Admin" class="btn btn-success">Dodaj nowy pokój</a>
+            <a asp-action="AddRoom" asp-controller="Admin" class="btn btn-outline-primary">Dodaj nowy pokój</a>
+            <a asp-action="RoomTypes" asp-controller="Admin" class="btn btn-outline-primary">Edytuj ceny pokoi</a>
         </div>
         @if (!rooms.Any())
         {
