--- a/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
@@ -22,7 +22,7 @@
             <button class="btn btn-primary" type="submit">Pobierz dane</button>
         </form>
         <p class="mt-3">
-            <a id="delete" asp-page="DeletePersonalData" class="btn btn-danger">Usuń konto</a>
+            <a id="delete" asp-page="DeletePersonalData" class="btn btn-danger" onclick="return confirm('Czy na pewno chcesz usunąć swoje konto?');">Usuń konto</a>
         </p>
     </div>
 </div>
